--- a/EFCore.BulkExtensions.PostgreSql/EFCore.BulkExtensions.PostgreSql.csproj
+++ b/EFCore.BulkExtensions.PostgreSql/EFCore.BulkExtensions.PostgreSql.csproj
@@ -9,8 +9,6 @@
   </PropertyGroup>
   <ItemGroup>
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EFCore.BulkExtensions.Core\EFCore.BulkExtensions.Core.csproj" />
+	<PackageReference Include="EFCore.BulkExtensions.Core" Version="10.0.0-rc.2" />
   </ItemGroup>
 </Project>
